<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="info.dicj.distributeur.MainActivity">

    <TextView
        android:text="@string/titre_distri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:text="@string/titre_boissons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:onClick="ajouterBoisson" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pepsi"
            android:id="@+id/bPepsi"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="ajouterBoisson" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orangeade"
            android:id="@+id/bOrangeade"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="ajouterBoisson" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/racinette"
            android:id="@+id/bRacinette"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="ajouterBoisson" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fraise"
            android:id="@+id/bFraise"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="ajouterBoisson" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:text="@string/titre_saveurs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_columnSpan="3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epice"
            android:id="@+id/sEpice"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="ajouterSaveur" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bacon"
            android:id="@+id/sBacon"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="ajouterSaveur" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gingembre"
            android:id="@+id/sGingembre"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="ajouterSaveur" />
    </GridLayout>


    <TextView
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/titre_operations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nouveau"
        android:onClick="nouveau" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verser"
        android:onClick="verser" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verser_prec"
        android:onClick="reverser" />

</LinearLayout>
